--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -15,8 +15,7 @@ spec:
       serviceAccountName: cert-utils-operator
       containers:
         - name: cert-utils-operator
-          # Replace this with the built image name
-          image: REPLACE_IMAGE
+          image: quay.io/redhat-cop/cert-utils-operator:latest
           command:
           - cert-utils-operator
           imagePullPolicy: Always
