--- a/deploy/role_binding.yaml
+++ b/deploy/role_binding.yaml
@@ -1,3 +1,15 @@
+kind: ClusterRoleBinding
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: cert-utils-operator
+subjects:
+- kind: ServiceAccount
+  name: cert-utils-operator
+roleRef:
+  kind: ClusterRole
+  name: cert-utils-operator
+  apiGroup: rbac.authorization.k8s.io
+---
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
@@ -8,4 +20,4 @@ subjects:
 roleRef:
   kind: Role
   name: cert-utils-operator
-  apiGroup: rbac.authorization.k8s.io
+  apiGroup: rbac.authorization.k8s.io  
