--- a/test/routes.yaml
+++ b/test/routes.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: test
+  annotations: 
+    service.alpha.openshift.io/serving-cert-secret-name: test-ocp-secret
 spec:
   ports:
   - name: 5000-tcp
