--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -7,14 +7,13 @@ rules:
 - apiGroups:
   - ""
   resources:
-  - services
   - events
   - secrets
   verbs:
   - "*"
 # Operator Business Logic
 - apiGroups:
-  - " route.openshift.io"
+  - "route.openshift.io"
   resources:
   - routes
   verbs:
@@ -25,17 +24,12 @@ apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: cert-utils-operator
 rules:
-# - apiGroups:
-#   - ""
-#   resources:
-#   - namespaces
-#   verbs:
-#   - get
 # leader election   
 - apiGroups:
   - ""
   resources:
   - configmaps
+  - pods
   verbs:
   - "*"  
 #Metrics  
@@ -44,7 +38,16 @@ rules:
   resources:
   - services
   verbs:
-  - "*"  
+  - "*"
+#Metrics  
+- apiGroups:
+  - "apps"
+  resources:
+  - replicasets
+  - deployments
+  verbs: 
+  - "get"
+  - "list"
 # Metrics  
 - apiGroups:
   - monitoring.coreos.com
