--- a/deploy/role_binding.yaml
+++ b/deploy/role_binding.yaml
@@ -4,6 +4,7 @@ metadata:
   name: cert-utils-operator
 subjects:
 - kind: ServiceAccount
+  namespace: cert-utils-operator
   name: cert-utils-operator
 roleRef:
   kind: ClusterRole
@@ -14,7 +15,7 @@ kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: cert-utils-operator
-subjects:
+subjects: 
 - kind: ServiceAccount
   name: cert-utils-operator
 roleRef:
