--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -17,7 +17,20 @@ rules:
   resources:
   - routes
   verbs:
-  - "*"  
+  - "*"
+- apiGroups:
+  - "admissionregistration.k8s.io"
+  resources:
+  - validatingwebhookconfigurations
+  - mutatingwebhookconfigurations
+  verbs:
+  - "*"
+- apiGroups:
+  - "apiextensions.k8s.io"
+  resources:
+  - customresourcedefinitions
+  verbs:
+  - "*"      
 ---
 kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
@@ -65,4 +78,3 @@ rules:
   - cert-utils-operator
   verbs:
   - "update"
-
