--- a/olm/operator-source.yaml
+++ b/olm/operator-source.yaml
@@ -7,5 +7,5 @@ spec:
   type: appregistry
   endpoint: https://quay.io/cnr
   registryNamespace: raffaelespazzoli
-  displayName: "Cert-utils-operator"
-  publisher: "COP"
+  displayName: "cert-utils-operator"
+  publisher: "CoP"
