ability to inject dest ca from different secret

--- a/test/routes.yaml
+++ b/test/routes.yaml
@@ -41,8 +41,7 @@ apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
   annotations:
-    cert-utils-operator.redhat-cop.io/certs-from-secret: "test1"
-    cert-utils-operator.redhat-cop.io/replace-dest-CA: "true"
+    cert-utils-operator.redhat-cop.io/certs-from-secret: "test1"    
   name: test1
 spec:
   tls:
@@ -56,12 +55,25 @@ kind: Route
 metadata:
   annotations:
     cert-utils-operator.redhat-cop.io/certs-from-secret: "test2"
-    cert-utils-operator.redhat-cop.io/replace-dest-CA: "true"
   name: test2
 spec:
   tls:
     termination: reencrypt
   to:
     kind: Service
-    name: test       
+    name: test
+---  
+apiVersion: route.openshift.io/v1
+kind: Route
+metadata:
+  annotations:
+    cert-utils-operator.redhat-cop.io/certs-from-secret: "test-ocp-secret"
+    cert-utils-operator.redhat-cop.io/destinationCA-from-secret: "test1"
+  name: test-destination-ca
+spec:
+  tls:
+    termination: reencrypt
+  to:
+    kind: Service
+    name: test           
 
