added helm chart

--- a/helm/cert-utils-operator/templates/operator.yaml
+++ b/helm/cert-utils-operator/templates/operator.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: cert-utils-operator
+  name: {{ .Release.Namespace }}
 spec:
   replicas: 1
   selector:
