--- a/helm/cert-utils-operator/templates/role.yaml
+++ b/helm/cert-utils-operator/templates/role.yaml
@@ -36,6 +36,7 @@ kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: cert-utils-operator
+  namespace: {{ .Release.Namespace }}
 rules:
 # leader election   
 - apiGroups:
