--- a/helm/cert-utils-operator/templates/role_binding.yaml
+++ b/helm/cert-utils-operator/templates/role_binding.yaml
@@ -4,7 +4,7 @@ metadata:
   name: cert-utils-operator
 subjects:
 - kind: ServiceAccount
-  namespace: cert-utils-operator
+  namespace: {{ .Release.Namespace }}
   name: cert-utils-operator
 roleRef:
   kind: ClusterRole
@@ -15,6 +15,7 @@ kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: cert-utils-operator
+  namespace: {{ .Release.Namespace }}
 subjects: 
 - kind: ServiceAccount
   name: cert-utils-operator
