added versions to helm templates

--- a/charts/cert-utils-operator/templates/operator.yaml
+++ b/charts/cert-utils-operator/templates/operator.yaml
@@ -16,7 +16,7 @@ spec:
       serviceAccountName: cert-utils-operator
       containers:
         - name: cert-utils-operator
-          image: quay.io/redhat-cop/cert-utils-operator:latest
+          image: quay.io/redhat-cop/cert-utils-operator:{{ .Values.image_tag }}
           command:
           - cert-utils-operator
           imagePullPolicy: Always
