--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,4 @@ tags
 .history
 # End of https://www.gitignore.io/api/go,vim,emacs,visualstudiocode
 vendor/
+charts/cert-utils-operator/values.yaml
