--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,4 @@ tags
 # End of https://www.gitignore.io/api/go,vim,emacs,visualstudiocode
 vendor/
 charts/cert-utils-operator/values.yaml
+charts/cert-utils-operator/Chart.yaml
