--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ before_install:
   - curl -L -s https://github.com/golang/dep/releases/download/v${DEP_VERSION}/dep-linux-amd64 -o $GOPATH/bin/dep
   - chmod +x $GOPATH/bin/dep
   - travis_retry dep ensure
+  - curl -LO https://git.io/get_helm.sh && chmod 700 get_helm.sh && ./get_helm.sh
 
 deploy:
   - provider: script
@@ -19,6 +20,7 @@ deploy:
       repo: redhat-cop/cert-utils-operator
       branch: master
       tags: false
+      #all_branches: true
   - provider: script
     skip_cleanup: true
     script: make travis-release-deploy
@@ -26,3 +28,4 @@ deploy:
       repo: redhat-cop/cert-utils-operator
       branch: master
       tags: true
+      #all_branches: true
