--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,10 @@ before_install:
   - if [ "${TRAVIS_PULL_REQUEST}" = "false" ]; then eval $(ssh-agent -s); fi
   - if [ "${TRAVIS_PULL_REQUEST}" = "false" ]; then ssh-add github_deploy_key; fi
   - curl -LO https://git.io/get_helm.sh && chmod 700 get_helm.sh && ./get_helm.sh
+  - go mod download
+  - go mod verify
+  - go mod why
+  - go mod graph
 
 deploy:
   - provider: script
