--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,10 @@ sudo: required
 language: go
 go_import_path: github.com/redhat-cop/cert-utils-operator
 go:
-- "1.11"
-env:
-  - DEP_VERSION=0.5.0
-  - GO111MODULE=on
+- "1.12"
+global: 
+  env:
+    - GO111MODULE=on
 
 before_install:
   - if [ "${TRAVIS_PULL_REQUEST}" = "false" ]; then openssl aes-256-cbc -K $encrypted_fa8b1278af8d_key -iv $encrypted_fa8b1278af8d_iv -in github_deploy_key.enc -out github_deploy_key -d; fi
@@ -13,10 +13,7 @@ before_install:
   - if [ "${TRAVIS_PULL_REQUEST}" = "false" ]; then eval $(ssh-agent -s); fi
   - if [ "${TRAVIS_PULL_REQUEST}" = "false" ]; then ssh-add github_deploy_key; fi
   - curl -LO https://git.io/get_helm.sh && chmod 700 get_helm.sh && ./get_helm.sh
-  - go mod download
-  - go mod verify
-  - go mod why
-  - go mod graph
+  - travis_retry go mod vendor
 
 deploy:
   - provider: script
