--- a/deploy/olm-catalog/operator-source.yaml
+++ b/deploy/olm-catalog/operator-source.yaml
@@ -6,6 +6,6 @@ metadata:
 spec:
   type: appregistry
   endpoint: https://quay.io/cnr
-  registryNamespace: <your-quay-repo>
+  registryNamespace: $quay_test_repo
   displayName: "cert-utils-operator"
   publisher: "CoP"
