--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: cert-utils-operator
-  namespace: {{ .Release.Namespace }}
+  namespace: cert-utils-operator
 spec:
   replicas: 1
   selector:
@@ -16,7 +16,7 @@ spec:
       serviceAccountName: cert-utils-operator
       containers:
         - name: cert-utils-operator
-          image: quay.io/redhat-cop/cert-utils-operator:{{ .Values.image_tag }}
+          image: quay.io/redhat-cop/cert-utils-operator:v0.0.3
           command:
           - cert-utils-operator
           imagePullPolicy: Always
