Update capabilitiies to Deep Insights

--- a/deploy/olm-catalog/cert-utils-operator/0.0.3/cert-utils-operator.v0.0.3.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/cert-utils-operator/0.0.3/cert-utils-operator.v0.0.3.clusterserviceversion.yaml
@@ -4,7 +4,7 @@ metadata:
   annotations:
     alm-examples: |
       []
-    capabilities: Full Lifecycle
+    capabilities: Deep Insights
     categories: Security
     certified: "false"
     containerImage: quay.io/redhat-cop/cert-utils-operator:latest
