--- a/deploy/olm-catalog/cert-utils-operator/0.0.3/cert-utils-operator.v0.0.3.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/cert-utils-operator/0.0.3/cert-utils-operator.v0.0.3.clusterserviceversion.yaml
@@ -99,6 +99,10 @@ spec:
                       fieldPath: metadata.name
                 - name: OPERATOR_NAME
                   value: cert-utils-operator
+                - name: NAMESPACE
+                  valueFrom:
+                    fieldRef:
+                      fieldPath: metadata.namespace                  
                 image: quay.io/redhat-cop/cert-utils-operator:v0.0.3
                 imagePullPolicy: Always
                 name: cert-utils-operator
