--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -29,3 +29,7 @@ spec:
                   fieldPath: metadata.name
             - name: OPERATOR_NAME
               value: "cert-utils-operator"
+            - name: NAMESPACE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace              
