fixed permissions fixed current csv
Signed-off-by: Raffaele Spazzoli <raffaele.spazzoli@gmail.com>

--- a/deploy/olm-catalog/cert-utils-operator/0.1.0/cert-utils-operator.v0.1.0.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/cert-utils-operator/0.1.0/cert-utils-operator.v0.1.0.clusterserviceversion.yaml
@@ -50,6 +50,7 @@ spec:
           resources:
           - events
           - secrets
+          - configmaps
           verbs:
           - '*'
         - apiGroups:
