--- a/test/webhookconfiguration.yaml
+++ b/test/webhookconfiguration.yaml
@@ -44,7 +44,7 @@ webhooks:
       namespace: webhookns
       name: webhook
 ---
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   # name must match the spec fields below, and be in the form: <plural>.<group>
@@ -52,15 +52,35 @@ metadata:
   annotations:
     cert-utils-operator.redhat-cop.io/injectca-from-secret: test-cert-utils/test1  
 spec:
+  preserveUnknownFields: false
   # group name to use for REST API: /apis/<group>/<version>
   group: stable.example.com
   # list of versions supported by this CustomResourceDefinition
   versions:
-    - name: v1
-      # Each version can be enabled/disabled by Served flag.
-      served: true
-      # One and only one version must be marked as the storage version.
-      storage: true
+  - name: v1beta1
+  # Each version can be enabled/disabled by Served flag.
+    served: true
+    # One and only one version must be marked as the storage version.
+    storage: true
+    # Each version can define it's own schema when there is no top-level
+    # schema is defined.
+    schema:
+      openAPIV3Schema:
+        type: object
+        properties:
+          hostPort:
+            type: string
+  - name: v1
+    served: true
+    storage: false
+    schema:
+      openAPIV3Schema:
+        type: object
+        properties:
+          host:
+            type: string
+          port:
+            type: string
   # either Namespaced or Cluster
   scope: Namespaced
   names:
@@ -74,9 +94,15 @@ spec:
     shortNames:
     - ct
   conversion: 
+    
     strategy: Webhook
-    webhookClientConfig:
-      url: https://ciao.net.io           
+    webhook:
+      conversionReviewVersions: ["v1","v1beta1"]
+      clientConfig:
+        service:
+          namespace: default
+          name: example-conversion-webhook-server
+          path: /crdconvert           
 ---
 apiVersion: admissionregistration.k8s.io/v1beta1
 kind: ValidatingWebhookConfiguration
@@ -124,7 +150,7 @@ webhooks:
       namespace: webhookns
       name: webhook
 ---
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   # name must match the spec fields below, and be in the form: <plural>.<group>
@@ -132,15 +158,35 @@ metadata:
   annotations:
     cert-utils-operator.redhat-cop.io/injectca-from-service_ca: "true"
 spec:
+  preserveUnknownFields: false
   # group name to use for REST API: /apis/<group>/<version>
   group: stable1.example.com
   # list of versions supported by this CustomResourceDefinition
   versions:
-    - name: v1
-      # Each version can be enabled/disabled by Served flag.
-      served: true
-      # One and only one version must be marked as the storage version.
-      storage: true
+  - name: v1beta1
+    # Each version can be enabled/disabled by Served flag.
+    served: true
+    # One and only one version must be marked as the storage version.
+    storage: true
+    # Each version can define it's own schema when there is no top-level
+    # schema is defined.
+    schema:
+      openAPIV3Schema:
+        type: object
+        properties:
+          hostPort:
+            type: string
+  - name: v1
+    served: true
+    storage: false
+    schema:
+      openAPIV3Schema:
+        type: object
+        properties:
+          host:
+            type: string
+          port:
+            type: string
   # either Namespaced or Cluster
   scope: Namespaced
   names:
@@ -155,5 +201,10 @@ spec:
     - ct
   conversion: 
     strategy: Webhook
-    webhookClientConfig:
-      url: https://ciao.net.io                 
+    webhook:
+      conversionReviewVersions: ["v1","v1beta1"]
+      clientConfig:
+        service:
+          namespace: default
+          name: example-conversion-webhook-server
+          path: /crdconvert                
