--- a/deploy/olm-catalog/cert-utils-operator/0.2.2/cert-utils-operator.v0.2.2.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/cert-utils-operator/0.2.2/cert-utils-operator.v0.2.2.clusterserviceversion.yaml
@@ -15,7 +15,8 @@ metadata:
   namespace: cert-utils-operator
 spec:
   apiservicedefinitions: {}
-  customresourcedefinitions: {}
+  customresourcedefinitions: 
+    owned: []
   description: |
     Cert utils operator is a set of functionalities around certificates packaged in a [Kubernetes operator](https://github.com/operator-framework/operator-sdk).
 
