--- a/test/cert-manager/setup.yaml
+++ b/test/cert-manager/setup.yaml
@@ -1,4 +1,4 @@
-apiVersion: cert-manager.io/v1alpha2
+apiVersion: cert-manager.io/v1
 kind: Issuer
 metadata:
   name: selfsigning-issuer
@@ -6,7 +6,7 @@ metadata:
 spec:
   selfSigned: {}
 ---  
-apiVersion: cert-manager.io/v1alpha2
+apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: rootca
@@ -19,7 +19,7 @@ spec:
     name: selfsigning-issuer
     kind: Issuer
 ---
-apiVersion: cert-manager.io/v1alpha2
+apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
   name: innerca
