Helm chart generation now uses the default service account with no resource limits.

--- a/config/helmchart/templates/manager.yaml
+++ b/config/helmchart/templates/manager.yaml
@@ -21,13 +21,12 @@ spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
-      {{- end }}
-      serviceAccountName: {{ include "cert-utils-operator.serviceAccountName" . }}    
+      {{- end }} 
       containers:
       - command:
         - /manager
         args:
-        - -leader-elect
+        - --leader-elect
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         name: {{ .Chart.Name }} 
