--- a/config/helmchart/templates/manager.yaml
+++ b/config/helmchart/templates/manager.yaml
@@ -18,6 +18,7 @@ spec:
       labels:
         {{- include "cert-utils-operator.selectorLabels" . | nindent 8 }}
     spec:
+      serviceAccountName: cert-utils-operator-controller-manager
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
