--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -12,16 +12,16 @@ metadata:
   name: controller-manager
   namespace: system
   labels:
-    control-plane: controller-manager
+    operator: cert-utils-operator
 spec:
   selector:
     matchLabels:
-      control-plane: controller-manager
+      operator: cert-utils-operator
   replicas: 1
   template:
     metadata:
       labels:
-        control-plane: controller-manager
+        operator: cert-utils-operator
     spec:
       serviceAccountName: controller-manager
       containers:
