--- a/config/rbac/auth_proxy_service.yaml
+++ b/config/rbac/auth_proxy_service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    control-plane: controller-manager
+    operator: cert-utils-operator
   annotations:
     service.alpha.openshift.io/serving-cert-secret-name: cert-utils-operator-certs
   name: controller-manager-metrics
@@ -13,4 +13,4 @@ spec:
     port: 8443
     targetPort: https
   selector:
-    control-plane: controller-manager
+    operator: cert-utils-operator
