added support for disconnected installation migrated to new operatro hub prod repo
Signed-off-by: raffaelespazzoli <raffaele.spazzoli@gmail.com>

--- a/config/manifests/bases/cert-utils-operator.clusterserviceversion.yaml
+++ b/config/manifests/bases/cert-utils-operator.clusterserviceversion.yaml
@@ -12,6 +12,7 @@ metadata:
     operatorframework.io/suggested-namespace: cert-utils-operator
     repository: https://github.com/redhat-cop/cert-utils-operator
     support: Best Effort
+    operators.openshift.io/infrastructure-features: '["Disconnected"]'
   name: cert-utils-operator.v0.0.0
   namespace: placeholder
 spec:
