--- a/config/manifests/bases/cert-utils-operator.clusterserviceversion.yaml
+++ b/config/manifests/bases/cert-utils-operator.clusterserviceversion.yaml
@@ -15,6 +15,11 @@ metadata:
     operators.openshift.io/infrastructure-features: '["Disconnected"]'
   name: cert-utils-operator.v0.0.0
   namespace: placeholder
+  labels:
+    operatorframework.io/os.linux: supported
+    operatorframework.io/arch.amd64: supported
+    operatorframework.io/arch.arm64: supported
+    operatorframework.io/arch.ppc64le: supported
 spec:
   apiservicedefinitions: {}
   customresourcedefinitions: {}
