--- a/config/manifests/bases/cert-utils-operator.clusterserviceversion.yaml
+++ b/config/manifests/bases/cert-utils-operator.clusterserviceversion.yaml
@@ -17,6 +17,7 @@ metadata:
     operatorframework.io/arch.amd64: supported
     operatorframework.io/arch.arm64: supported
     operatorframework.io/arch.ppc64le: supported
+    operatorframework.io/arch.s390x: supported
     operatorframework.io/os.linux: supported
   name: cert-utils-operator.v0.0.0
   namespace: placeholder
