--- a/config/local-development/tilt/kustomization.yaml
+++ b/config/local-development/tilt/kustomization.yaml
@@ -12,6 +12,24 @@ bases:
 
 patchesJson6902:
 - target:
+    group: admissionregistration.k8s.io
+    version: v1
+    kind: MutatingWebhookConfiguration
+    name: patch-operator-mutating-webhook-configuration
+  path: ./ca-injection.yaml
+- target:
+    group: admissionregistration.k8s.io
+    version: v1
+    kind: ValidatingWebhookConfiguration
+    name: patch-operator-validating-webhook-configuration
+  path: ./ca-injection.yaml
+- target:
+    group: ""
+    version: v1
+    kind: Service
+    name: patch-operator-webhook-service
+  path: ./secret-injection.yaml
+- target:  
     group: apps
     version: v1
     kind: Deployment
