--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Namespace
 metadata:
   labels:
-    control-plane: controller-manager
+    control-plane: cert-utils-operator
     openshift.io/cluster-monitoring: "true"
   name: system
 ---
@@ -12,16 +12,16 @@ metadata:
   name: controller-manager
   namespace: system
   labels:
-    operator: cert-utils-operator
+    control-plane: cert-utils-operator
 spec:
   selector:
     matchLabels:
-      operator: cert-utils-operator
+      control-plane: cert-utils-operator
   replicas: 1
   template:
     metadata:
       labels:
-        operator: cert-utils-operator
+        control-plane: cert-utils-operator
     spec:
       serviceAccountName: controller-manager
       containers:
@@ -37,12 +37,14 @@ spec:
           httpGet:
             path: /healthz
             port: 8081
+            scheme: HTTP
           initialDelaySeconds: 15
           periodSeconds: 20
         readinessProbe:
           httpGet:
             path: /readyz
             port: 8081
+            scheme: HTTP
           initialDelaySeconds: 5
           periodSeconds: 10
         resources:
