standardize Makefile and CI config

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -8,8 +8,9 @@ on:
 jobs:
   shared-operator-workflow:
     name: shared-operator-workflow
-    uses: redhat-cop/github-workflows-operators/.github/workflows/pr-operator.yml@v1.0.4
-    with: 
+    uses: redhat-cop/github-workflows-operators/.github/workflows/pr-operator.yml@v1.0.5
+    with:
       RUN_UNIT_TESTS: true
       RUN_INTEGRATION_TESTS: false
       RUN_HELMCHART_TEST: true
+      GO_VERSION: ~1.19
